--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,11 @@ header {
     background-color: green;
 }
 
+.container_team {
+    background-color: black;
+    height: 300px;
+}
+
 /* end header debug */
 
 main {
@@ -32,7 +37,7 @@ main {
 
 .main_container {
     background-color: blue;
-    height: 600px;
+    height: 800px;
     border: 1px solid white;
 }
 
@@ -44,6 +49,11 @@ main {
 .small_main_col, .big_main_col {
     height: 300px;
     border: 1px solid black;
+}
+
+.cards_second_section {
+    border: 1px solid black;
+    background-color: green;
 }
 
 /* end main debug */
@@ -70,6 +80,10 @@ footer {
 
 .tx_center {
     text-align: center;
+}
+
+.space_between {
+    justify-content: space-between;
 }
 
 /* header */
@@ -102,4 +116,12 @@ footer {
 
 .big_main_col {
     width: 70%;
+}
+
+.cards_second_section {
+    width: calc(100% / 3 - 30px);
+}
+
+.container_team {
+    margin-top: 20px;
 }
