--- a/style/style.css
+++ b/style/style.css
@@ -25,8 +25,8 @@
 
 .container_team, .container_third_section {
     background-color: black;
-    height: 300px;
-    color: aliceblue;
+/*     height: 300px;
+ */    color: aliceblue;
 }
 
 /* end header debug */
@@ -37,16 +37,16 @@ main {
 
 .main_container, .image_container {
     background-color: blue;
-    height: 800px;
-    border: 1px solid white;
+/*     height: 800px;
+ */    border: 1px solid white;
 }
 
 .row_main {
     background-color: purple;
-    height: 400px;
-}
+/*     height: 400px;
+ */}
 
-.small_main_col, .big_main_col {
+.big_main_col {
     height: 300px;
     border: 1px solid black;
 }
@@ -55,6 +55,11 @@ main {
     border: 1px solid black;
     background-color: green;
 }
+
+.cards_container {
+    background-color: red;
+/*     height: 100%;
+ */}
 
 
 /* fouth section debug */
@@ -86,7 +91,13 @@ body {
 }
 
 .main_container {
-    width: 80%;
+    width: 70%;
+    max-width: 1170px;
+    margin: auto;
+}
+
+.main_container_small {
+    width: 90%;
     max-width: 1170px;
     margin: auto;
 }
@@ -95,8 +106,20 @@ body {
     display: flex;
 }
 
-.pd20 {
-    padding: 20px 0;
+.pd150 {
+    padding: 150px;
+}
+
+.pd40 {
+    padding: 40px 0;
+}
+
+.pdb15 {
+    padding-bottom: 15px;
+}
+
+.pdr5 {
+    padding-right: 5px;
 }
 
 .tx_center {
@@ -118,6 +141,15 @@ body {
 .wrap {
     flex-wrap: wrap;
 }
+
+.margin_bottom_20 {
+    margin-bottom: 20px;
+}
+
+.margin_top_bottom_20 {
+    margin: 20px 0;
+}
+
 
 /* header */
 
@@ -170,11 +202,38 @@ h1 {
     width: 30%;
 }
 
+.bottone_prova_gratuita {
+    background-color: blue;
+    padding: 15px;
+    border: none;
+    margin: 20px 0;
+    font-size: 15px;
+}
+
 .big_main_col {
     width: 70%;
 }
 
+.big_main_col > img {
+    object-fit: cover;
+    width: 100%;
+}
+
 /* second section */
+
+.radio_button_main {
+    padding-top: 25px;
+}
+
+.scale_2 {
+    transform: scale(2);
+    margin: 0 5px;
+}
+
+.fatturazione_mensile {
+    margin-right: 40px;
+}
+
 
 .row_main {
     padding: 20px;
@@ -183,6 +242,38 @@ h1 {
 .cards_second_section, .cards_third_section {
     width: calc(100% / 3 - 30px);
 }
+
+.cards_second_section > i {
+    padding: 10px;
+    border: 1px solid black;
+    width: 100%;
+    text-align: center;
+}
+
+.cards_container {
+    width: 90%;
+    max-width: 1170px;
+    margin: auto;
+}
+
+.margin_mese {
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
+
+.paddin_before_buttons {
+    padding-bottom: 40px;
+}
+
+.riga {
+    background-color: black;
+    height: 1px;
+    width: 30%;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+
 
 .container_team {
     margin-top: 20px;
