--- a/style/style.css
+++ b/style/style.css
@@ -112,6 +112,10 @@ body {
     padding: 20px;
 }
 
+.pd10 {
+    padding: 10px;
+}
+
 .pd40 {
     padding: 40px 0;
 }
@@ -356,6 +360,27 @@ h1 {
 
 .logo_container {
     width: calc(100% / 2);
+}
+
+.main_square {
+   
+}
+
+
+
+.square > img, .square {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
+    padding: 20px;
+}
+
+.light_green {
+    background-color: lightgreen;
+}
+
+.green {
+    background-color: green;
 }
 
 /* footer */
