--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,6 @@ main {
 
 footer {
     background-color: black;
-    height: 400px;
 }
 
 
@@ -328,7 +327,7 @@ h1 {
 .riga {
     background-color: black;
     height: 1px;
-    width: 30%;
+    width: 100px;
     margin-top: 30px;
     margin-bottom: 50px;
 }
@@ -428,7 +427,7 @@ footer, .white {
 }
 
 .col_footer {
-    min-width: calc(100% / 5);
+    width: calc(100% / 5 - 30px);
     background-color: yellow;
 }
 
