--- a/style/style.css
+++ b/style/style.css
@@ -344,7 +344,7 @@ h2 {
 }
 
 h3 {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 h5 {
@@ -457,7 +457,9 @@ h5 {
 
 .cards_fourth_section {
     margin-top: 10px;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 
 .cards_fourth_section > img {
