--- a/style/style.css
+++ b/style/style.css
@@ -230,11 +230,17 @@ body {
 
 /* header */
 
+header {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+}
+
 nav {
     width: 100%;
-    top: 0;
     background-color: white;
-    position: fixed;
     font-size: 15px;
 }
 
@@ -242,6 +248,12 @@ nav {
     width: calc(100% / 2);
     align-items: center;
     height: 60px;
+}
+
+.img_nav {
+    margin-top: 15px;
+    width: 140px;
+    height: 30px;
 }
 
 .card_header_left > img {
@@ -480,6 +492,11 @@ h5 {
     aspect-ratio: 1;
     padding: 20px;
 }
+
+.square > img {
+    filter: invert();
+}
+
 
 .light_green {
     background-color: var(--bkc-light-green);
