--- a/style/style.css
+++ b/style/style.css
@@ -97,8 +97,8 @@ body {
     display: flex;
 }
 
-.mgt150 {
-    margin-top: 150px;
+.pdt150 {
+    padding-top: 150px;
 }
 
 .pdb80 {
@@ -304,7 +304,6 @@ nav {
 }
 
 h1 {
-    padding-left: 20px;
     font-family: 'Open Sans', sans-serif;
     max-width: 80%;
     font-size: 60px;
@@ -498,12 +497,11 @@ h5 {
 }
 
 
-.light_green {
-    background-color: var(--bkc-light-green);
-}
+
 
 .green {
     background-color: var(--bkc-green);
+    box-shadow: 0 0 0 5px var(--bkc-light-green) inset;
 }
 
 .purple {
@@ -520,6 +518,10 @@ h5 {
 
 .light_gray {
     background-color: var(--bkc-light-gray);
+}
+
+.gray {
+    color: gray;
 }
 
 .red_strong {
@@ -561,7 +563,7 @@ footer, .white {
 }
 
 .riga_footer {
-    background-color: white;
+    background-color: gray;
     height: 1px;
     width: 100px;
     margin-top: 30px;
